changed glyphicons to font awsome

--- a/nablapps/accounts/templates/accounts/view_member_profile.html
+++ b/nablapps/accounts/templates/accounts/view_member_profile.html
@@ -23,7 +23,7 @@
 
         {% if user == member %}
             <a href="{% url "edit_profile" %}">
-                <span class="glyphicon glyphicon-edit"></span>
+                <span class="fas fa-edit"></span>
             </a>
         {% endif %}
         </h2>
