--- a/nablapps/events/templates/events/event_list.html
+++ b/nablapps/events/templates/events/event_list.html
@@ -62,7 +62,7 @@
                         {% endif %}
 
                         {% if event.attending %}
-                            <span class="glyphicon glyphicon-check"></span> Har plass
+                            <span class="fas fa-check"></span> Har plass
                         {% endif %}
                     </td>
                 </tr>
