--- a/nablapps/events/templates/events/event_showuser.html
+++ b/nablapps/events/templates/events/event_showuser.html
@@ -60,7 +60,7 @@
             </td>
             <td style="text-align:right;">
             {% if eventregistration.attending %}
-                <span class="glyphicon glyphicon-ok-sign"></span>
+                <span class="fas fa-thumbs-up"></span>
             {% else %}
                 Ventelisteplass: {{ eventregistration.waiting_list_place }}
             {% endif %}
