--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -157,7 +157,7 @@
     <tr>
         <td style="text-align: center;" colspan="2">
             {% if is_attending %}
-                <span class="glyphicon glyphicon-ok"></span>
+                <span class="fas fa-thumbs-up"></span>
                 <strong>Du er påmeldt</strong>
             {% elif is_waiting %}
                 Du står på venteliste
