--- a/nablapps/interactive/templates/interactive/advent_base.html
+++ b/nablapps/interactive/templates/interactive/advent_base.html
@@ -100,7 +100,7 @@
 
 {% if door %}
 <div class="col-md-2 corner-right">
-<a href="{{ calendar.get_absolute_url }}"><span class="glyphicon glyphicon-share-alt"></span></a>
+<a href="{{ calendar.get_absolute_url }}"><span class="fas fa-share-alt-square"></span></a>
 </div>
 {% endif %}
 </div>
