--- a/nablapps/interactive/templates/interactive/quizreply_confirm_delete.html
+++ b/nablapps/interactive/templates/interactive/quizreply_confirm_delete.html
@@ -6,7 +6,7 @@
 <form action="" method="post">{% csrf_token %}
     <p>Er du sikker på at du vil slette svaret ditt?</p>
     <button class="btn btn-danger" type="submit" >
-        <span class="glyphicon glyphicon-trash"></span>
+        <span class="fas fa-trash-alt"></span>
         Slett
     </button>
 </form>
