--- a/nablapps/interactive/templates/interactive/advent_base_2018.html
+++ b/nablapps/interactive/templates/interactive/advent_base_2018.html
@@ -106,7 +106,7 @@
 
 {% if door %}
 <div class="col-md-2 corner-right">
-<a href="{{ calendar.get_absolute_url }}"><span class="glyphicon glyphicon-share-alt" style="color: rgb(154,16,39)"></span></a>
+<a href="{{ calendar.get_absolute_url }}"><span class="fas fa-share-alt-square" style="color: rgb(154,16,39)"></span></a>
 </div>
 {% endif %}
 </div>
