--- a/nablapps/poll/templates/poll/user_polls.html
+++ b/nablapps/poll/templates/poll/user_polls.html
@@ -19,7 +19,7 @@ Mine avstemninger
 <div class="btn-group">
     <form style="display: inline" method="POST" action="{% url "poll_user_delete" poll.id %}">
         <button class="btn btn-danger" type="submit">
-            <span class="glyphicon glyphicon-trash"></span>
+            <span class="fas fa-trash"></span>
             Slett
         </button>
         {% csrf_token %}
