--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -13,7 +13,7 @@
   <div class="form-group">
     <input type="text" name="q" id="id_q" class="form-control" style="" placeholder="Søk..." {% if query %}value="{{ query }}"{% endif %}/>
     <button type="submit" class="btn btn-primary" value="Søk">
-      <span class="glyphicon glyphicon-search"></span>
+      <span class="fas fa-search"></span>
       Søk
     </button><br />
     <label> Søk etter bruker: <input type="checkbox" name="models" value="accounts.nablauser" /></label>
