Previous fix of #441 broke up time and dates. This will not

--- a/nablapps/events/templates/events/includes/info.html
+++ b/nablapps/events/templates/events/includes/info.html
@@ -10,7 +10,7 @@
     }
 
     .table-break-word td{
-        word-break: break-all;
+        overflow-wrap: break-word;
     }
 
     .content-info span.trinn {
