Changes all instances of "votation" to "voting"
I guess "voting" is stil not a very good name, but didn't want to
use "poll" again.

--- a/nablapps/vote/templates/vote/active_voting_list.html
+++ b/nablapps/vote/templates/vote/active_voting_list.html
@@ -4,7 +4,7 @@
 <h1>Avstemninger</h1>
 <ul>
     {% for object in object_list %}
-    <li><a href="{% url "votation-vote" pk=object.pk %}">{{ object.title }}<a></li>
+    <li><a href="{% url "voting-vote" pk=object.pk %}">{{ object.title }}<a></li>
     {% empty %}
        Ingen aktive avstemninger
     {% endfor %}
