--- a/nablapps/vote/templates/vote/voting_vote.html
+++ b/nablapps/vote/templates/vote/voting_vote.html
@@ -24,7 +24,7 @@
 </form>
 
 
-<a href="{% url "active-votation-list" %}">Tilbake til liste over aktive avstemninger</a>
+<a href="{% url "active-voting-list" %}">Tilbake til liste over aktive avstemninger</a>
 {% endblock %}
 
 
