--- a/nablapps/vote/templates/vote/voting_list.html
+++ b/nablapps/vote/templates/vote/voting_list.html
@@ -10,19 +10,12 @@
         <tr>
             <td>
                 {% if vote.is_active %}
-                <i class="text-success fas fa-toggle-on"></i>
+                <a href="{% url "deactivate-voting" pk=vote.pk redirect_to=request.path %}" class="text-success fas fa-toggle-on btn"></a>
                 {% else %}
-                <i class="text-danger fas fa-toggle-off"></i>
+                <a href="{% url "activate-voting" pk=vote.pk redirect_to=request.path %}" class="text-danger fas fa-toggle-off btn"></a>
                 {% endif %}
             </td>
             <td><a href="{% url "voting-detail" pk=vote.pk %}">{{ vote.title }}</a></td>
-            <td>
-                {% if vote.is_active %}
-                <a href="{% url "deactivate-voting" pk=vote.pk redirect_to=request.path %}">(Deaktiver)</a>
-                {% else %}
-                <a href="{% url "activate-voting" pk=vote.pk redirect_to=request.path %}">(Aktiver)</a>
-                {% endif %}
-            </td>
             <td>
                 {% for alternative in vote.alternatives.all %}
                     <span>{{ alternative }}: {{ alternative.votes }} ({{ alternative.get_vote_percentage }}%)|</span>
