Revert "Improvements to GUI"

--- a/nablapps/vote/templates/vote/voting_vote.html
+++ b/nablapps/vote/templates/vote/voting_vote.html
@@ -20,9 +20,9 @@
             </label>
         </div>
     {% endfor %}
-    <button class="btn btn-primary btn-block" type="submit">Stem</button>
+    <button class="btn btn-default btn-block" type="submit">Stem</button>
 </form>
 
 
-<a href="{% url "active-voting-list" %}"><i class="fas fa-arrow-left"></i> Tilbake til liste over aktive avstemninger</a>
+<a href="{% url "active-voting-list" %}">Tilbake til liste over aktive avstemninger</a>
 {% endblock %}
