--- a/nablapps/vote/templates/vote/voting_event_list.html
+++ b/nablapps/vote/templates/vote/voting_event_list.html
@@ -4,7 +4,7 @@
 <h1>Voteringsarrangementer</h1>
 <ul>
     {% for object in object_list %}
-    <li><a href="{% url "voting-list" pk=object.pk %}">{{ object.title }}<a></li>
+    <li><a href="{% url "voting-list" pk=object.pk %}">{{ object.title }}</a></li>
     {% empty %}
         <li>Ingen arrangementer</li>
     {% endfor %}
