--- a/nablapps/vote/templates/vote/voting_event_list.html
+++ b/nablapps/vote/templates/vote/voting_event_list.html
@@ -9,5 +9,7 @@
         <li>Ingen arrangementer</li>
     {% endfor %}
 </ul>
+
+<a href="{% url "active-voting-list" %}"><i class="fas fa-arrow-left"></i>Gå ut av administrasjonssiden.</a>
 {% endblock %}
 
