--- a/nablapps/vote/templates/vote/voting_vote.html
+++ b/nablapps/vote/templates/vote/voting_vote.html
@@ -20,7 +20,7 @@
     <button class="btn btn-primary btn-block" type="submit">Stem</button>
 </form>
 {% else %}
-<h2>Du har allerede stemt!</h2>
+<p class="alert alert-warning">Du har allerede stemt!</p>
 {% endif %}
 
 <a href="{% url "active-voting-list" %}"><i class="fas fa-arrow-left"></i> Tilbake til liste over aktive avstemninger</a>
