Fixes some admin UI

--- a/nablapps/vote/templates/vote/voting_list.html
+++ b/nablapps/vote/templates/vote/voting_list.html
@@ -4,18 +4,18 @@
 <h1>Avstemninger</h1>
 <a href="{% url "voting-event-list" %}"><i class="fas fa-arrow-left"></i> Tilbake til avstemningsarrangementer</a>
 <br>
+{% if is_admin %}
 <a href="{% url "create-voting" pk=object.pk %}">Opprett ny avstemning</a>
+{% endif %}
     <table>
         {% for vote in object.votings.all %}
         <tr>
             <td>
-                {% if is_admin %}
-                    {% if vote.is_active %}
-                    <a href="{% url "deactivate-voting" pk=vote.pk redirect_to=request.path %}" class="text-success fas fa-lg fa-toggle-on btn"></a>
-                    {% else %}
-                    <a href="{% url "activate-voting" pk=vote.pk redirect_to=request.path %}" class="text-danger fas fa-lg fa-toggle-off btn"></a>
-                    {% endif %}
-                {% endif %}
+               {% if vote.is_active %}
+               <a href="{% url "deactivate-voting" pk=vote.pk redirect_to=request.path %}" class="text-success fas fa-lg fa-toggle-on btn{% if is_admin %} disabled{% endif %}"></a>
+               {% else %}
+               <a href="{% url "activate-voting" pk=vote.pk redirect_to=request.path %}" class="text-danger fas fa-lg fa-toggle-off btn{% if is_admin %} disabled{% endif %}"></a>
+               {% endif %}
             </td>
             <td><a href="{% url "voting-detail" pk=vote.pk %}">{{ vote.title }}</a></td>
             <td>
