Switches some template block from content to main
No sidebars on these pages

--- a/nablapps/vote/templates/vote/active_voting_list.html
+++ b/nablapps/vote/templates/vote/active_voting_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html"%}
 
-{% block content %}
+{% block main %}
 <h1>Avstemninger</h1>
 {% if admin_rights %}
 <a href="{% url "voting-event-list" %}">(Til admin-side)</a>
