--- a/nablapps/vote/templates/vote/voting_detail.html
+++ b/nablapps/vote/templates/vote/voting_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}
 {% load markdown %}
 
-{% block content %}
+{% block main %}
 <h1>{{ object.title }}</h1>
 <h4>
     Status: 
