Revert "Merge pull request #437 from Nabla-NTNU/exchange_updates_2"
This reverts commit 4e871c46f429f946388887d1cfe4e02b2ae4a0b1, reversing
changes made to 1ecadb93327a4f8cc6bd5b6fd2cf13321200de60.

--- a/nablapps/exchange/templates/exchange/ex_detail_list.html
+++ b/nablapps/exchange/templates/exchange/ex_detail_list.html
@@ -28,24 +28,16 @@
                 <td>{{obj.get_retning_display}}</td>
                 <td>{{obj.start|date:"F Y"}}</td>
                 <td>{{obj.end|date:"F Y"}}</td>
-                {% if obj.subject_set.exists %}
-                    <td>
-                    {% for subject in obj.subject_set.all %}
-                        <p>{{ subject.code }} {{ subject.name }}</p>
-                    {% endfor %}
-                    </td>
+                {% if obj.fag %}
+                    <td>{{obj.fag }}</td>
                 {% else %}
                     <td>-</td>
                 {% endif %}
                 {% if user.is_authenticated %}
-                    {% if obj.optional_email %}
-                        <td>{{obj.optional_email}}</td>
-                    {% else %}
-                        <td>{{obj.student.email}}</td>
-                    {% endif %}
+                    <td>{{obj.student.email}}</td>
                 {% endif %}
                 {% if obj.facebook %}
-                    <td><a href="{{obj.facebook }}">Til facebook</a></td>
+                    <td>{{obj.facebook }}</td>
                 {% else %}
                     <td>-</td>
                 {% endif %}
