Ads Code_golf and nabla_wiki to the navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -248,6 +248,8 @@
                             <a class="dropdown-item" href="{% url "season_view" %}">Skråttcast</a>
                             <a class="dropdown-item" href="/referater/{% now "Y" %}">Styremøtereferater</a>
                             <a class="dropdown-item" href="{% url "albums" %}">Bildealbum</a>
+                            <a class="dropdown-item" href="{% url "code_golf_menu" %}">Kodegolf</a>
+                            <a class="dropdown-item" href="{% url "wiki:root" %}">Wiki</a>
                             <a class="dropdown-item" href="{% url "blog" %}">Blogg</a>
                             <a class="dropdown-item" href="/julekalender/2020/">Julekalender 2020</a>
 {% comment %}
