Ads youtube-channel to footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -458,10 +458,11 @@
                     <img src="{% static "img/nabla-white.svg" %}" alt="nabla logo">
                     <br />
                     <br />
-                    <a href="https://www.facebook.com/nablantnu/" class="fab fa-facebook-f fa-3x social-icon"></a>
-                    <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-3x social-icon"></a>
-                    <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-3x social-icon"></a>
-                    <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-3x social-icon"></a>
+                    <a href="https://www.facebook.com/nablantnu/" class="fab fa-facebook-f fa-2x social-icon"></a>
+                    <a href="https://www.youtube.com/user/LinjeforeningenNabla" class="fab fa-youtube fa-2x social-icon"></a>
+                    <a href="https://www.instagram.com/nablalinjeforening/" class="fab fa-instagram fa-2x social-icon"></a>
+                    <a href="https://nablantnu.slack.com/" class="fab fa-slack fa-2x social-icon"></a>
+                    <a href="https://github.com/Nabla-NTNU/nablaweb" class="fab fa-github fa-2x social-icon"></a>
                 </div>
             </div>
             </div>
